# sparcslib

./: CMakeLists.txt  package.xml
config/: force_control_node.yaml  uav_pid_ctrl.yaml
include/: common.h  controller.cpp  controller.h  controller.h.autosave  controller_node.h  kalman_filter.h  sparcsnode.h  systems.h
launch/: ball_control.launch  controlled_ball.launch  controlled_box.launch  linked_balls.launch  uav_pid_ctrl.launch
matlab/: 2019-09-18-10-11-00.bag  bag_analysis.m  ball_control.m  ball_simulation.slx  ball_simulation.slx.autosave  ball_simulation.slxc  cf_pos.csv  data.csv  data2.csv  data3.csv  data4.csv  debug_nuovo.csv  debug_nuovo2.csv  debug_nuovo3.csv  debug_topic.csv  debug_topic_nonstamp.csv  latest.bag  odom.csv  pid_ctrl.slx  pid_ctrl.slx.original  pid_ctrl.slxc  pid_ctrl.tgz  ros_interface.slx  ros_interface.slx.original  ros_interface.slxc  sparcslib.slx  sparcslib.slx.autosave  sparcslib.slxc  sparcslib.tgz
matlab/pid_ctrl_grt_rtw/: buildInfo.mat  build_exception.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  multiword_types.h  pid_ctrl.c  pid_ctrl.h  pid_ctrl.mk  pid_ctrl_data.c  pid_ctrl_private.h  pid_ctrl_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
matlab/sparcslib_ert_rtw/: CMakeLists.txt  MW_custom_RTOS_header.h  MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  defines.txt  ert_main.cpp  modelsources.txt  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h  sparcslib.cpp  sparcslib.h  sparcslib.mk  sparcslib_data.cpp  sparcslib_types.h  (+1 more)
models/: basic_reference.sdf  controlled_ball.sdf  controlled_box.sdf  linked_balls.urdf.xacro  rigid_balls.urdf.xacro  trajectory_printer.sdf
src/: force_control.cpp  force_control.h  force_control_node.cpp  force_control_node.h  forcecontrol_node.h.autosave  kalman_filter.cpp  movable_object.cpp  movable_object.h  pid.cpp  pid.h  sparcs_plugin.cpp  sparcs_plugin.h  sparcsnode.cpp  systems.cpp.autosave  trajectory_printer.cpp  trajectory_printer.h  uav.cpp  uav.h  uav_pid_ctrl.h  uav_pid_ctrl_node.cpp
(+61 files in other folders)
